--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
 	"license": "MIT",
 	"dependencies": {
 		"@nivo/calendar": "^0.79.1",
+		"@nivo/colors": "^0.79.1",
 		"@nivo/core": "^0.79.0",
 		"@nivo/line": "^0.79.1",
-		"@tailwindcss/forms": "^0.4.0",
+		"@tailwindcss/forms": "^0.5.0",
 		"@tailwindcss/typography": "^0.5.0",
-		"axios": "^0.25.0",
+		"axios": "^0.26.1",
 		"compression": "^1.7.4",
 		"express": "^4.17.1",
-		"graphql-request": "^3.7.0",
+		"graphql": "^16.3.0",
+		"graphql-request": "^4.2.0",
 		"graphql-ws": "^5.5.5",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
 		"react-helmet": "^6.1.0",
 		"react-router-dom": "^6.0.2",
 		"serialize-javascript": "^6.0.0",
@@ -39,8 +41,8 @@
 		"@swc/core": "^1.2.108",
 		"@types/compression": "^1.7.2",
 		"@types/express": "^4.17.13",
-		"@types/react": "^17.0.34",
-		"@types/react-dom": "^17.0.11",
+		"@types/react": "^18.0.5",
+		"@types/react-dom": "^18.0.1",
 		"@types/react-helmet": "^6.1.4",
 		"@types/react-router-dom": "^5.3.2",
 		"@types/serialize-javascript": "^5.0.1",
@@ -62,7 +64,7 @@
 		"sass-loader": "^12.3.0",
 		"source-map-loader": "^3.0.0",
 		"style-loader": "^3.3.1",
-		"swc-loader": "^0.1.15",
+		"swc-loader": "^0.2.0",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.4.4",
 		"webpack": "^5.64.0",
